src/main/resources/shynet/service-webserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: shynet-webserver-service  
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: shynet-webserver
  externalTrafficPolicy: Local
