src/main/resources/shynet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shynet-webserver-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: true
    ingress.kubernetes.io/ssl-redirect: true
    cert-manager.io/cluster-issuer: letsencrypt-staging-issuer
spec:
  tls:
  - hosts:
    - fqdn
    secretName: shynet-secret
  rules:
  - host: fqdn
    http:
      paths:
      - backend:
          service:
            name: shynet-webserver-service
            port:
              number: 8080
        path: /
        pathType: Prefix
